Feature(backend+frontend): Create chat (#56)
* Feature(backend+frontend): Create chat.
* Fix(backend): Fix test attempt status check_failure due to number in text task.
* Chore(backend): Increase coverage to 99%.
* Chore(backend): Set coverage to fail under 99% cover.
